--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-TODO:
-* Add some more items to this list.
-* Add keywords to Makefile.PL
+- atom:source
+- georss:point
+- better support for activitystrea.ms
